--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,11 +7,13 @@
     <hr>
     <app-toggle></app-toggle>
     <hr>
+    <h5 class="text-center text-capitalize">angular directives</h5>
     <app-ng-if></app-ng-if>
-    <hr>
     <app-ng-for></app-ng-for>
-    <hr>
     <app-ng-switch></app-ng-switch>
+    <hr>
+    <h5 class="text-center text-capitalize">displaying data</h5>
+    <app-displaying-data></app-displaying-data>
   </div>
 </app-layout>
 
