--- a/src/app/ui/ng-for/ng-for.component.html
+++ b/src/app/ui/ng-for/ng-for.component.html
@@ -1,5 +1,5 @@
 
-<div class="row text-center d-flex justify-content-center">
+<div class="row text-center d-flex justify-content-center pb-4">
   <div class="col-4">
     <h6>ngFor</h6>
     <ul class="list-group">
