--- a/src/app/ui/ng-switch/ng-switch.component.html
+++ b/src/app/ui/ng-switch/ng-switch.component.html
@@ -1,5 +1,5 @@
 
-<div class="row d-flex justify-content-center">
+<div class="row d-flex justify-content-center pb-4">
   <div class="col-4 text-center">
     <h6>ngSwitchCase</h6>
     <input class="form-control" type="text"  [(ngModel)] ="count">
