add hint to tag code

--- a/src/app/displaying-data/displaying-data.component.html
+++ b/src/app/displaying-data/displaying-data.component.html
@@ -1,7 +1,7 @@
 
   <ul class="list-group">
     <li class="list-group-item">
-      <p>Привязка элемента DOM к значению компонента (односторонняя). Например:</p>
+      <p>Привязка элемента DOM к значению компонента (односторонняя) используя <code><code>{{</code> name <code>}}</code></code>. Например:</p>
       <p>Welcome <code>{{name}}</code></p>
     </li>
     <li class="list-group-item">
